--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,18 @@
 			<version>8.0.24</version>
 		</dependency>
 		
+		<!-- mybatis -->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis</artifactId>
+		    <version>3.4.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis-spring</artifactId>
+		    <version>1.3.0</version>
+		</dependency>
+		
 		<!-- fastjson -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
